syntax = "proto2";
package structure;

message AuthRequest {
  message Version {
    required uint32 major = 1;
    required uint32 minor = 2;
    required uint32 patch = 3;
  }
  required Version version = 1; // Required
  required string token = 2;
}

message AuthResponse {
  required bool success = 1;
  required string failure_reason = 2;
}

message FileDescription {
  required string name = 1;
  required uint64 size = 2;
  required uint64 packet_size = 3;
}

message FileDescriptionResponse {
  message FileStatus {
    enum FileStatusEnum {
      EXISTS = 0;
      RESUMEABLE = 1;
      NONEXISTENT = 2;
    }
    required FileStatusEnum status = 1;
    required uint64 id = 2;
    required uint64 request_packet = 3;
    required uint64 packet_size = 4;
    required uint64 total_packets = 5;
  }
  oneof Event {
    FileStatus status = 1;
    string fail_message = 2;
  }
}

message FilePart {
  required uint64 part_num = 1;
  required bytes data = 2;
}

message FilePartResponse {
  required bool success = 1;
  required string message = 2;
}